fix pdf-body to break line if title is too long

--- a/src/app/components/pdf-editavel/pdf-editavel.component.css
+++ b/src/app/components/pdf-editavel/pdf-editavel.component.css
@@ -28,7 +28,7 @@
 }
 .pdf-body{
     margin: 1em 0;
-
+    word-wrap: break-word;
 }
 
 .pdf-body h2{
